ARROW-9363: [C++][Dataset] Preserve schema metadata in ParquetDatasetFactory

Closes #7673 from jorisvandenbossche/ARROW-9363

Authored-by: Joris Van den Bossche <jorisvandenbossche@gmail.com>
Signed-off-by: Antoine Pitrou <antoine@python.org>